# awesome-readme

./: 404.html  index.html  main.py  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: documentation.yml
__init__/: index.html
articles/: index.html
docs/: articles.md  examples.md  index.md  others.md  tools.md
examples/: index.html
others/: index.html
search/: search_index.json
src/: create_markdown.py  get_data.py  get_images.py  main.py
templates/: articles.md  examples.md  others.md  tools.md
tools/: index.html
