[tool.poetry]
name = "src"
version = "0.1.0"
description = "Awesome README Docs"
authors = ["Francisco Alfaro <francisco.alfaro.496@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.4"
selenium = "^4.20.0"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
mkdocs-material = "^9.5.21"
neoteroi-mkdocs = "^1.0.5"

